# galario_for_python3.13

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  worklog.txt
GreatCMakeCookOff/modules/: FindCoherentPython.cmake
GreatCMakeCookOff/scripts/: PythonInstall.cmake
benchmarks/: quickstart_benchmark.py  run_quickstart.sh
cmake/: FindFFTW3.cmake  LookUp-GreatCMakeCookOff.cmake
docs/: C++-example.rst  CMakeLists.txt  FAQ.rst  architecture.rst  basic_usage.rst  conf.py.in  cookbook.rst  emcee_tutorial.rst  index.rst  install.rst  py-api.rst  quickstart.rst  reproducibility.rst
examples/: chi2_image_gaussian.py  chi2_profile_gaussian.py  emcee_gaussian_profile.py  plot_chi2_image_visibility_residuals.py
python/: CMakeLists.txt  __init__.py.in  __init_module__.py.in  api_builders.py  api_constants.py  api_utils.py  bindings_nanobind.cpp  galario_defs.pxd  libcommon.pyx  nanobind_api_v2.py
python/nanobind_double/: __init__.py
python/nanobind_double_cuda/: __init__.py
src/: CMakeLists.txt  galario.cpp  galario.h  galario_api.cpp  galario_common.cpp  galario_cpu.cpp  galario_defs.h  galario_gpu.cu  galario_internal.h  galario_profile_common.h  galario_py.h  galario_test.cpp
tests/python/: conftest.py  test_galario.py  test_nanobind.py  utils.py
