[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.12",
  "numpy>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "galario"
version = "1.3.0"
description = "GPU accelerated library for analysing radio interferometer observations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Marco Tazzari" },
  { name = "Frederik Beaujean" },
  { name = "Leonardo Testi" },
]
keywords = [
  "astronomy",
  "interferometry",
  "radio astronomy",
  "gpu",
  "cuda",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "scipy>=1.13",
]
docs = [
  "sphinx>=7",
]
demo = [
  "corner>=2.2",
  "emcee>=3.1",
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://mtazzari.github.io/galario/"
Documentation = "https://mtazzari.github.io/galario/"
Repository = "https://github.com/mtazzari/galario"
Issues = "https://github.com/mtazzari/galario/issues"
Changelog = "https://github.com/mtazzari/galario/blob/master/CHANGELOG.rst"

[tool.scikit-build]
build-dir = ".pyproject-build/{wheel_tag}"
cmake.build-type = "Release"
sdist.include = [
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CMakeLists.txt",
  "LICENSE",
  "README.md",
  "cmake",
  "benchmarks",
  "docs",
  "examples",
  "python",
  "src",
  "tests",
]
sdist.exclude = [
  ".git",
  ".pytest_cache",
  ".pyproject-build",
  "build",
  "build_wsl",
  "cleanup-warnings-install.patch",
  "desktop.ini",
  "tests/python/.pytest_cache",
  "tests/python/__pycache__",
  "worklog.txt",
]
